# socketioxide-binary-test

./: Makefile  README.md
client/: pom.xml
client/src/main/java/org/spurint/socketioxidetest/: Main.java
server/: Cargo.toml
server/src/: main.rs
